# DataFusion_Custom_Function_Implementation

./: Cargo.toml  LICENSE  README.md  data.csv
src/: lib.rs  main.rs
